# python-project-lvl1

./: .gitignore  main.py  makefile  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progress.py  brain_start.py  cli.py  honest_game.py  parity_check.py  parity_check_game.py  run_calc.py  run_even.py  run_gcd.py  run_prime.py  run_progression.py
