[tool.poetry]
name = "qwertyNodes_brain_games"
version = "0.1.0"
description = ""
authors = ["John <johny.kingy2016@gmail.com>"]
packages = [
    {include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-even = "brain_games.engine:start_even"
brain-calc = "brain_games.engine:start_calc"
brain-gcd = "brain_games.engine:start_gcd"
brain-progress = "brain_games.engine:start_progression"
brain-prime = "brain_games.engine:start_prime"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

