[tool.poetry]
name = "qwertyNodes_brain_games"
version = "0.1.0"
description = ""
authors = ["John <johny.kingy2016@gmail.com>"]
packages = [
    {include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.run_even:main"
brain-calc = "brain_games.scripts.run_calc:main"
brain-gcd = "brain_games.scripts.run_gcd:main"
brain-progress = "brain_games.scripts.run_progression:main"
brain-prime = "brain_games.scripts.run_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

